feat: Add product favorite prompt APIs (#63)